@@ -127,14 +127,25 @@ class CActiveDataProvider extends CDataProvider
 			$pagination->applyLimit($criteria);
 		}
 
-		if(($sort=$this->getSort())!==false)
-			$sort->applyOrder($criteria);
-
 		$baseCriteria=$this->model->getDbCriteria(false);
-		if($baseCriteria!==null)
-			$baseCriteria=clone $baseCriteria;
+
+		if(($sort=$this->getSort())!==false)
+		{
+			// set model criteria so that CSort can use its table alias setting
+			if($baseCriteria!==null)
+			{
+				$c=clone $baseCriteria;
+				$c->mergeWith($criteria);
+				$this->model->setDbCriteria($c);
+			}
+			else
+				$this->model->setDbCriteria($criteria);
+			$sort->applyOrder($criteria);
+		}
+
+		$this->model->setDbCriteria($baseCriteria!==null ? clone $baseCriteria : null);
 		$data=$this->model->findAll($criteria);
-		$this->model->setDbCriteria($baseCriteria);
+		$this->model->setDbCriteria($baseCriteria);  // restore original criteria
 		return $data;
 	}
 
