@@ -8,6 +8,7 @@ Version 1.1.8 work in progress
 - Bug #2272: Fixed the bug of undefined index css in CTreeView (mdomba)
 - Bug #2274: CDbCriteria can't merge "with" anymore if a scope applied another "with" condition (Sam Dark, Michael)
 - Bug #2275: Fixed the bug that ajax error handler was not called in case of exception (mdomba)
+- Bug #2292: Fixed the bug that CActiveDataProvider may ignore the specified criteria for the sorting configuration (Qiang)
 - Enh #2262: Added warning log when a session fails to start by CHttpSession (Qiang)
 - Enh #2268: Added CClientScript::getPackageBaseUrl() (Qiang)
 - Enh #2273: Used better merging algorithm to build query parameters that are of array type in CUrlManager (Qiang)
